* https://github.com/oxidecomputer/dropshot/pull/502[#502] Dropshot exposes a `refresh_tls` method to update the TLS certificates being used by a running server. If you previously tried to access `DropshotState.tls`, you can access the `DropshotState.using_tls()` method instead.

=== Other notable Changes

* https://github.com/oxidecomputer/dropshot/pull/452[#452] Dropshot no longer enables the `slog` cargo features `max_level_trace` and `release_max_level_debug`. Previously, clients were unable to set a release log level of `trace`; now they can. However, clients that did not select their own max log levels will see behavior change from the levels Dropshot was choosing to the default levels of `slog` itself (`debug` for debug builds and `info` for release builds).
* https://github.com/oxidecomputer/dropshot/pull/451[#451] There are now response types to support 302 ("Found"), 303 ("See Other"), and 307 ("Temporary Redirect") HTTP response codes.  See `HttpResponseFound`, `HttpResponseSeeOther`, and `HttpResponseTemporaryRedirect`.
* https://github.com/oxidecomputer/dropshot/pull/503[#503] Add an optional `deprecated` field to the `#[endpoint]` macro.

== 0.8.0 (released 2022-09-09)

https://github.com/oxidecomputer/dropshot/compare/v0.7.0\...v0.8.0[Full list of commits]

=== Breaking Changes

* https://github.com/oxidecomputer/dropshot/pull/403[#403] Dropshot now supports WebSockets.  See the docs for details.
+
As part of this, the `ExtractorMetadata` type has been changed to represent our nonstandard extensions to OpenAPI in a field `extension_mode: ExtensionMode`, rather than `paginated: bool`, which was previously our only nonstandard extension, but is now joined by WebSockets.
+
In any existing code that checked `extractor_metadata.paginated`, you can instead check that `extractor_metadata.extension_mode` is `ExtensionMode::Paginated`.
